--- a/flow_script.ipynb
+++ b/flow_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solve(n):\n",
+    "def solve(n=6):\n",
     "    df=pd.read_csv('flow_data.csv')\n",
     "    div=59242.27/n\n",
     "    mp={}\n",
@@ -24,11 +24,17 @@
     "    for i in range(n):\n",
     "        minn.append(0x3f3f3f3f)\n",
     "        maxn.append(-0x3f3f3f3f)\n",
+    "    \n",
+    "    se=set(df['time'])\n",
+    "    \n",
+    "    for idx in se:\n",
+    "        for i in range(n):\n",
+    "            mp[(idx,i)]=0\n",
     "\n",
     "    for iter,row in df.iterrows():\n",
     "        bucket=int(min(max(row['money'],0)//div,n-1))\n",
     "        tar=(row['time'],bucket)\n",
-    "        mp[tar]=mp.get(tar,0)+1\n",
+    "        mp[tar]=mp.get(tar)+1\n",
     "        minn[bucket]=min(minn[bucket],row['money'])\n",
     "        maxn[bucket]=max(maxn[bucket],row['money'])\n",
     "    \n",
@@ -41,7 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solve(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,132 +67,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>time</th>\n",
-       "      <th>money</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>59575</th>\n",
-       "      <td>59575</td>\n",
-       "      <td>2018-05-22</td>\n",
-       "      <td>-320.82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21490</th>\n",
-       "      <td>21490</td>\n",
-       "      <td>2018-05-08</td>\n",
-       "      <td>-0.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69012</th>\n",
-       "      <td>69012</td>\n",
-       "      <td>2018-05-28</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51152</th>\n",
-       "      <td>51152</td>\n",
-       "      <td>2018-05-21</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51144</th>\n",
-       "      <td>51144</td>\n",
-       "      <td>2018-05-21</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48393</th>\n",
-       "      <td>48393</td>\n",
-       "      <td>2018-05-19</td>\n",
-       "      <td>29947.67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27370</th>\n",
-       "      <td>27370</td>\n",
-       "      <td>2018-05-10</td>\n",
-       "      <td>32685.85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69814</th>\n",
-       "      <td>69814</td>\n",
-       "      <td>2018-05-29</td>\n",
-       "      <td>50078.31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37518</th>\n",
-       "      <td>37518</td>\n",
-       "      <td>2018-05-15</td>\n",
-       "      <td>59242.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42010</th>\n",
-       "      <td>42010</td>\n",
-       "      <td>2018-05-17</td>\n",
-       "      <td>264047.50</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>77079 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Unnamed: 0        time      money\n",
-       "59575       59575  2018-05-22    -320.82\n",
-       "21490       21490  2018-05-08      -0.60\n",
-       "69012       69012  2018-05-28       0.00\n",
-       "51152       51152  2018-05-21       0.00\n",
-       "51144       51144  2018-05-21       0.00\n",
-       "...           ...         ...        ...\n",
-       "48393       48393  2018-05-19   29947.67\n",
-       "27370       27370  2018-05-10   32685.85\n",
-       "69814       69814  2018-05-29   50078.31\n",
-       "37518       37518  2018-05-15   59242.27\n",
-       "42010       42010  2018-05-17  264047.50\n",
-       "\n",
-       "[77079 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-05-11\n",
+      "2018-05-17\n",
+      "2018-05-09\n",
+      "2018-05-30\n",
+      "2018-05-27\n",
+      "2018-05-10\n",
+      "2018-05-06\n",
+      "2018-05-08\n",
+      "2018-05-29\n",
+      "2018-05-26\n",
+      "2018-05-22\n",
+      "2018-05-28\n",
+      "2018-05-25\n",
+      "2018-05-19\n",
+      "2018-05-12\n",
+      "2018-05-20\n",
+      "2018-05-23\n",
+      "2018-05-07\n",
+      "2018-05-16\n",
+      "2018-05-14\n",
+      "2018-05-18\n",
+      "2018-05-03\n",
+      "2018-05-02\n",
+      "2018-05-15\n",
+      "2018-05-05\n",
+      "2018-05-21\n",
+      "2018-05-04\n",
+      "2018-05-24\n",
+      "2018-05-01\n",
+      "2018-05-31\n",
+      "2018-05-13\n"
+     ]
     }
    ],
    "source": [
-    "a=df.sort_values(by=['money'])\n",
-    "a"
+    "se=set(df['time'])\n",
+    "for idx in se:\n",
+    "    print(idx)"
    ]
   },
   {
