--- a/flow_script.ipynb
+++ b/flow_script.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,8 @@
     "        minn[bucket]=min(minn[bucket],row['money'])\n",
     "        maxn[bucket]=max(maxn[bucket],row['money'])\n",
     "    \n",
+    "\n",
+    "    mp=dict(sorted(mp.items(),key=lambda x:(x[0][1],x[0][0])))\n",
     "    import json\n",
     "    with open(\"flow_data.json\", 'w', encoding='utf8') as f:\n",
     "        obj = [{\"time\": a, \"group\": str([minn[b],maxn[b]]),\"value\":v }for (a,b), v in mp.items()]\n",
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
