--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "Name: FRAUD, Length: 65359, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,13 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "app=Flask(__name__)\n",
     "# 设置文件上传保存路径，这里设置为当前文件夹下的 upload 文件夹\n",
     "app.config['UPLOAD_FOLDER'] = 'upload/'\n",
+    "\n",
     "\n",
     "@app.route('/upload', methods=['POST'])\n",
     "def upload_file():\n",
@@ -118,7 +119,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "@app.route('/load_network',methods=['GET'])\n",
+    "def load_network():\n",
+    "    with open(\"network_data.json\",'r', encoding='UTF-8') as f:\n",
+    "        load_dict = json.load(f)\n",
+    "    return load_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +151,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n"
+      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [06/Jun/2023 09:27:55] \"\u001b[37mGET /load_network HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [06/Jun/2023 09:51:41] \"\u001b[37mGET /load_network HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
