--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,46 +12,13 @@
     "from flask import Flask, request, jsonify\n",
     "from werkzeug.utils import secure_filename\n",
     "import os\n",
-    "from processData import processData"
+    "from Processing import Processing\n",
+    "from flask_cors import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CL_OWNER_PAY_AMT\n",
-       "0.354208    1\n",
-       "0.354208    1\n",
-       "0.354208    1\n",
-       "0.354208    0\n",
-       "0.197284    0\n",
-       "           ..\n",
-       "0.354208    0\n",
-       "0.354208    0\n",
-       "0.581685    0\n",
-       "0.354208    1\n",
-       "0.721002    1\n",
-       "Name: FRAUD, Length: 65359, dtype: int64"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "df_data = pd.read_csv('df_data_premodel_final.csv',index_col=[0])\n",
-    "df_data['FRAUD']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +32,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<flask_cors.extension.CORS at 0x257ee78ab20>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "app=Flask(__name__)\n",
     "# 设置文件上传保存路径，这里设置为当前文件夹下的 upload 文件夹\n",
     "app.config['UPLOAD_FOLDER'] = 'upload/'\n",
+    "CORS(app, supports_credentials=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.route('/load_network',methods=['GET'])\n",
+    "def load_network():\n",
+    "    with open(\"network_data.json\",'r', encoding='UTF-8') as f:\n",
+    "        load_dict = f.read()\n",
+    "    return load_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.route('/load_wordcloud',methods=['GET'])\n",
+    "def load_wordcloud():\n",
+    "    with open(\"wordcloud.json\",'r', encoding='UTF-8') as f:\n",
+    "        load_dict = f.read()\n",
+    "    return load_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.route('/load_line',methods=['POST'])\n",
+    "def load_line():\n",
+    "    lst=request.get_json()\n",
     "\n",
+    "    import json\n",
+    "    with open('line_data.json','r', encoding='UTF-8')as f:\n",
+    "        data=json.load(f)\n",
+    "    ans=[]\n",
+    "    for hosptial in lst: \n",
+    "        ans.append(data[hosptial])\n",
+    "    return json.dumps({k: data[k] for k in lst}, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 加载模型\n",
+    "# model = torch.nn.Sequential(torch.nn.Linear(784, 128), torch.nn.ReLU(), torch.nn.Linear(128, 10))\n",
+    "# model.load_state_dict(torch.load('mnist_model.pth'))\n",
+    "# model.eval()\n",
     "\n",
     "@app.route('/upload', methods=['POST'])\n",
     "def upload_file():\n",
@@ -93,47 +128,22 @@
     "            filename = secure_filename(file.filename)\n",
     "            # 将文件保存到指定目录\n",
     "            originPath=os.path.join(app.config['UPLOAD_FOLDER'], filename)\n",
-    "            processedPath=os.path.join(app.config['UPLOAD_FOLDER'], \"processed\"+filename)\n",
+    "            processedPath=os.path.join(app.config['UPLOAD_FOLDER'], \"processed\"+filename.split('.')[0]+\".csv\")\n",
     "            file.save(originPath)\n",
-    "            print(originPath)\n",
+    "            print(\"start process data...\")\n",
     "            # 数据预处理并预测\n",
-    "            # processData(originPath,processedPath)\n",
+    "            prcs=Processing()\n",
+    "            prcs.processing(originPath,processedPath)\n",
+    "            print(\"process data overed\")\n",
     "            # ans=predict()\n",
     "            # return {'message': ans}\n",
     "            \n",
-    "            return jsonify({'message': 'File uploaded successfully'})\n",
-    "\n",
-    "        # 如果用户上传的文件不符合要求，则返回错误信息\n",
-    "    #     else:\n",
-    "    #         return {'message': 'Allowed file types are csv, xlsx, xls'}\n",
-    "    # return '''\n",
-    "    # <!doctype html>\n",
-    "    # <title>Upload new File</title>\n",
-    "    # <h1>Upload new File</h1>\n",
-    "    # <form action=\"\" method=post enctype=multipart/form-data>\n",
-    "    #   <p><input type=file name=file>\n",
-    "    #      <input type=submit value=Upload>\n",
-    "    # </form>\n",
-    "    # '''"
+    "            return jsonify({'message': 'File uploaded successfully'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "@app.route('/load_network',methods=['GET'])\n",
-    "def load_network():\n",
-    "    with open(\"network_data.json\",'r', encoding='UTF-8') as f:\n",
-    "        load_dict = json.load(f)\n",
-    "    return load_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -151,9 +161,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [06/Jun/2023 09:27:55] \"\u001b[37mGET /load_network HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [06/Jun/2023 09:51:41] \"\u001b[37mGET /load_network HTTP/1.1\u001b[0m\" 200 -\n"
+      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start process data...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [06/Jun/2023 16:39:55] \"\u001b[37mPOST /upload HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "process data overed\n"
      ]
     }
    ],
