--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,16 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<flask_cors.extension.CORS at 0x257ee78ab20>"
+       "<flask_cors.extension.CORS at 0x1a1627a4d30>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.route('/load_hospital',methods=['GET'])\n",
+    "def load_hospital():\n",
+    "    import json\n",
+    "    with open('line_hospital.json','r', encoding='UTF-8')as f:\n",
+    "        data=json.load(f)\n",
+    "    \n",
+    "    return json.dumps(data, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -161,28 +176,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start process data...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [06/Jun/2023 16:39:55] \"\u001b[37mPOST /upload HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "process data overed\n"
+      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [07/Jun/2023 23:20:08] \"\u001b[33mGET / HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [07/Jun/2023 23:20:09] \"\u001b[33mGET / HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [07/Jun/2023 23:20:09] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [07/Jun/2023 23:20:20] \"\u001b[33mGET /hospital HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [07/Jun/2023 23:20:39] \"\u001b[37mGET /load_hospital HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
