--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,13 @@
     "import os\n",
     "from Processing import Processing\n",
     "from Predict import predict\n",
-    "from flask_cors import *"
+    "from flask_cors import *\n",
+    "import math\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<flask_cors.extension.CORS at 0x1c22bf1d460>"
+       "<flask_cors.extension.CORS at 0x7fdeebf16c80>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,13 +124,15 @@
     "    import json\n",
     "    with open('line_hospital.json','r', encoding='UTF-8')as f:\n",
     "        data=json.load(f)\n",
-    "    \n",
+    "    data = list(set(data))\n",
+    "    data = [d for d in data if type(d) is str]\n",
+    "    # data.remove(float('nan'))\n",
     "    return json.dumps(data, ensure_ascii=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,17 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * Serving Flask app \"__main__\" (lazy loading)\n",
-      " * Environment: production\n",
-      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
-      "   Use a production WSGI server instead.\n",
+      " * Serving Flask app '__main__'\n",
       " * Debug mode: off\n"
      ]
     },
@@ -190,58 +190,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start process data...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [09/Jun/2023 16:01:31] \"\u001b[37mPOST /upload HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "数据格式不匹配\n",
-      "start process data...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [09/Jun/2023 16:03:03] \"\u001b[37mPOST /upload HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "数据格式不匹配\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [09/Jun/2023 16:04:16] \"\u001b[37mGET /load_network HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [09/Jun/2023 16:04:16] \"\u001b[37mGET /load_wordcloud HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [09/Jun/2023 16:04:16] \"\u001b[37mGET /load_flow HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [09/Jun/2023 16:04:22] \"\u001b[37mGET /load_network HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [09/Jun/2023 16:04:22] \"\u001b[37mGET /load_wordcloud HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [09/Jun/2023 16:04:22] \"\u001b[37mGET /load_flow HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [09/Jun/2023 16:04:25] \"\u001b[37mGET /load_network HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [09/Jun/2023 16:04:25] \"\u001b[37mGET /load_wordcloud HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [09/Jun/2023 16:04:25] \"\u001b[37mGET /load_flow HTTP/1.1\u001b[0m\" 200 -\n"
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:5000\n",
+      "Press CTRL+C to quit\n",
+      "[2023-06-10 15:26:49,026] ERROR in app: Exception on /load_hospital [GET]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 2525, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 1822, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"/home/meo/.local/lib/python3.10/site-packages/flask_cors/extension.py\", line 165, in wrapped_function\n",
+      "    return cors_after_request(app.make_response(f(*args, **kwargs)))\n",
+      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 1820, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 1796, in dispatch_request\n",
+      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)\n",
+      "  File \"/tmp/ipykernel_54797/4099681.py\", line 7, in load_hospital\n",
+      "    data = [d for d in data if not math.isnan(d)]\n",
+      "  File \"/tmp/ipykernel_54797/4099681.py\", line 7, in <listcomp>\n",
+      "    data = [d for d in data if not math.isnan(d)]\n",
+      "TypeError: must be real number, not str\n",
+      "127.0.0.1 - - [10/Jun/2023 15:26:49] \"GET /load_hospital HTTP/1.1\" 500 -\n"
      ]
     }
    ],
@@ -267,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
