fix: line_data.json缺失

--- a/main.ipynb
+++ b/main.ipynb
@@ -40,7 +40,7 @@
     {
      "data": {
       "text/plain": [
-       "<flask_cors.extension.CORS at 0x7fdeebf16c80>"
+       "<flask_cors.extension.CORS at 0x7fbc0f67d150>"
       ]
      },
      "execution_count": 3,
@@ -105,7 +105,7 @@
     "    lst=request.get_json()\n",
     "\n",
     "    import json\n",
-    "    with open('line_data.json','r', encoding='UTF-8')as f:\n",
+    "    with open('data_line.json','r', encoding='UTF-8')as f:\n",
     "        data=json.load(f)\n",
     "    ans=[]\n",
     "    for hosptial in lst: \n",
@@ -193,7 +193,23 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "[2023-06-10 15:26:49,026] ERROR in app: Exception on /load_hospital [GET]\n",
+      "127.0.0.1 - - [10/Jun/2023 15:27:51] \"GET /load_hospital HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:28:00] \"GET /load_network HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:28:00] \"GET /load_wordcloud HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:28:00] \"GET /load_flow HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:28:04] \"GET /load_hospital HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:29:23] \"GET /load_hospital HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:29:36] \"GET /load_network HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:29:36] \"GET /load_wordcloud HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:29:36] \"GET /load_flow HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:29:38] \"GET /load_hospital HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:30:15] \"GET /load_hospital HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:30:17] \"GET /load_network HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:30:17] \"GET /load_wordcloud HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:30:17] \"GET /load_flow HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:30:20] \"GET /load_hospital HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:32:15] \"OPTIONS /load_line HTTP/1.1\" 200 -\n",
+      "[2023-06-10 15:32:15,891] ERROR in app: Exception on /load_line [POST]\n",
       "Traceback (most recent call last):\n",
       "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 2525, in wsgi_app\n",
       "    response = self.full_dispatch_request()\n",
@@ -205,12 +221,31 @@
       "    rv = self.dispatch_request()\n",
       "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 1796, in dispatch_request\n",
       "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)\n",
-      "  File \"/tmp/ipykernel_54797/4099681.py\", line 7, in load_hospital\n",
-      "    data = [d for d in data if not math.isnan(d)]\n",
-      "  File \"/tmp/ipykernel_54797/4099681.py\", line 7, in <listcomp>\n",
-      "    data = [d for d in data if not math.isnan(d)]\n",
-      "TypeError: must be real number, not str\n",
-      "127.0.0.1 - - [10/Jun/2023 15:26:49] \"GET /load_hospital HTTP/1.1\" 500 -\n"
+      "  File \"/tmp/ipykernel_55040/3392595576.py\", line 6, in load_line\n",
+      "    with open('line_data.json','r', encoding='UTF-8')as f:\n",
+      "  File \"/opt/anaconda/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 282, in _modified_open\n",
+      "    return io_open(file, *args, **kwargs)\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: 'line_data.json'\n",
+      "127.0.0.1 - - [10/Jun/2023 15:32:15] \"POST /load_line HTTP/1.1\" 500 -\n",
+      "127.0.0.1 - - [10/Jun/2023 15:32:48] \"OPTIONS /load_line HTTP/1.1\" 200 -\n",
+      "[2023-06-10 15:32:48,812] ERROR in app: Exception on /load_line [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 2525, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 1822, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"/home/meo/.local/lib/python3.10/site-packages/flask_cors/extension.py\", line 165, in wrapped_function\n",
+      "    return cors_after_request(app.make_response(f(*args, **kwargs)))\n",
+      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 1820, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 1796, in dispatch_request\n",
+      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)\n",
+      "  File \"/tmp/ipykernel_55040/3392595576.py\", line 6, in load_line\n",
+      "    with open('line_data.json','r', encoding='UTF-8')as f:\n",
+      "  File \"/opt/anaconda/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 282, in _modified_open\n",
+      "    return io_open(file, *args, **kwargs)\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: 'line_data.json'\n",
+      "127.0.0.1 - - [10/Jun/2023 15:32:48] \"POST /load_line HTTP/1.1\" 500 -\n"
      ]
     }
    ],
