--- a/main.ipynb
+++ b/main.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"D:/File/大/大三下/poke\")\n",
+    "sys.path.append(\"D:/File/大/大三下/eco+ai\")\n",
     "# 导入 Flask 框架、request 对象和 secure_filename 方法\n",
     "from flask import Flask, request, jsonify\n",
     "from werkzeug.utils import secure_filename\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<flask_cors.extension.CORS at 0x7fbc0f67d150>"
+       "<flask_cors.extension.CORS at 0x211cc81db20>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,46 +57,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "@app.route('/load_network',methods=['GET'])\n",
     "def load_network():\n",
-    "    with open(\"data_network.json\",'r', encoding='UTF-8') as f:\n",
+    "    with open(\"data_chart/data_network.json\",'r', encoding='UTF-8') as f:\n",
     "        load_dict = f.read()\n",
     "    return load_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "@app.route('/load_wordcloud',methods=['GET'])\n",
     "def load_wordcloud():\n",
-    "    with open(\"data_wordcloud.json\",'r', encoding='UTF-8') as f:\n",
+    "    with open(\"data_chart/data_wordcloud.json\",'r', encoding='UTF-8') as f:\n",
     "        load_dict = f.read()\n",
     "    return load_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "@app.route('/load_flow',methods=['GET'])\n",
     "def load_flow():\n",
-    "    with open(\"data_flow.json\",'r', encoding='UTF-8') as f:\n",
+    "    with open(\"data_chart/data_flow.json\",'r', encoding='UTF-8') as f:\n",
     "        load_dict = f.read()\n",
     "    return load_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
     "    lst=request.get_json()\n",
     "\n",
     "    import json\n",
-    "    with open('data_line.json','r', encoding='UTF-8')as f:\n",
+    "    with open('data_chart/data_line.json','r', encoding='UTF-8')as f:\n",
     "        data=json.load(f)\n",
     "    ans=[]\n",
     "    for hosptial in lst: \n",
@@ -115,16 +115,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "@app.route('/load_hospital',methods=['GET'])\n",
     "def load_hospital():\n",
     "    import json\n",
-    "    with open('line_hospital.json','r', encoding='UTF-8')as f:\n",
+    "    with open('data_chart/line_hospital.json','r', encoding='UTF-8')as f:\n",
     "        data=json.load(f)\n",
-    "    data = list(set(data))\n",
+    "    \n",
+    "    data = list(data)\n",
+    "    \n",
+    "\n",
     "    data = [d for d in data if type(d) is str]\n",
     "    # data.remove(float('nan'))\n",
     "    return json.dumps(data, ensure_ascii=False)"
@@ -132,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,12 +145,12 @@
     "    # if request.method == 'POST':\n",
     "        # 判断请求中是否包含文件\n",
     "        if 'file' not in request.files:\n",
-    "            return {'message': 'No file part'}\n",
+    "            return {'error': 'No file part'}\n",
     "        file = request.files['file']\n",
     "\n",
     "        # 如果用户没有选择文件，则返回错误信息\n",
     "        if file.filename == '':\n",
-    "            return {'message': 'No selected file'}\n",
+    "            return {'error': 'No selected file'}\n",
     "\n",
     "        # 如果用户上传的文件符合要求，则保存文件并返回成功信息\n",
     "        if file and isAllowedFile(file.filename):\n",
@@ -167,7 +170,7 @@
     "                print(\"数据格式不匹配\")\n",
     "                return {'error':\"数据格式不匹配\"}\n",
     "            ans=predict(processedPath)\n",
-    "            print(ans)\n",
+    "            # print(ans)\n",
     "            return {'message': ans}\n",
     "            \n",
     "            return jsonify({'message': 'File uploaded successfully'})"
@@ -175,14 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * Serving Flask app '__main__'\n",
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
+      "   Use a production WSGI server instead.\n",
       " * Debug mode: off\n"
      ]
     },
@@ -190,62 +196,76 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
-      " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [10/Jun/2023 15:27:51] \"GET /load_hospital HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:28:00] \"GET /load_network HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:28:00] \"GET /load_wordcloud HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:28:00] \"GET /load_flow HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:28:04] \"GET /load_hospital HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:29:23] \"GET /load_hospital HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:29:36] \"GET /load_network HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:29:36] \"GET /load_wordcloud HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:29:36] \"GET /load_flow HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:29:38] \"GET /load_hospital HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:30:15] \"GET /load_hospital HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:30:17] \"GET /load_network HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:30:17] \"GET /load_wordcloud HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:30:17] \"GET /load_flow HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:30:20] \"GET /load_hospital HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:32:15] \"OPTIONS /load_line HTTP/1.1\" 200 -\n",
-      "[2023-06-10 15:32:15,891] ERROR in app: Exception on /load_line [POST]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 2525, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 1822, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"/home/meo/.local/lib/python3.10/site-packages/flask_cors/extension.py\", line 165, in wrapped_function\n",
-      "    return cors_after_request(app.make_response(f(*args, **kwargs)))\n",
-      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 1820, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 1796, in dispatch_request\n",
-      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)\n",
-      "  File \"/tmp/ipykernel_55040/3392595576.py\", line 6, in load_line\n",
-      "    with open('line_data.json','r', encoding='UTF-8')as f:\n",
-      "  File \"/opt/anaconda/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 282, in _modified_open\n",
-      "    return io_open(file, *args, **kwargs)\n",
-      "FileNotFoundError: [Errno 2] No such file or directory: 'line_data.json'\n",
-      "127.0.0.1 - - [10/Jun/2023 15:32:15] \"POST /load_line HTTP/1.1\" 500 -\n",
-      "127.0.0.1 - - [10/Jun/2023 15:32:48] \"OPTIONS /load_line HTTP/1.1\" 200 -\n",
-      "[2023-06-10 15:32:48,812] ERROR in app: Exception on /load_line [POST]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 2525, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 1822, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"/home/meo/.local/lib/python3.10/site-packages/flask_cors/extension.py\", line 165, in wrapped_function\n",
-      "    return cors_after_request(app.make_response(f(*args, **kwargs)))\n",
-      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 1820, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/opt/anaconda/lib/python3.10/site-packages/flask/app.py\", line 1796, in dispatch_request\n",
-      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)\n",
-      "  File \"/tmp/ipykernel_55040/3392595576.py\", line 6, in load_line\n",
-      "    with open('line_data.json','r', encoding='UTF-8')as f:\n",
-      "  File \"/opt/anaconda/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 282, in _modified_open\n",
-      "    return io_open(file, *args, **kwargs)\n",
-      "FileNotFoundError: [Errno 2] No such file or directory: 'line_data.json'\n",
-      "127.0.0.1 - - [10/Jun/2023 15:32:48] \"POST /load_line HTTP/1.1\" 500 -\n"
+      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [13/Jun/2023 10:14:42] \"\u001b[37mGET /load_network HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [13/Jun/2023 10:14:42] \"\u001b[37mGET /load_wordcloud HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [13/Jun/2023 10:14:42] \"\u001b[37mGET /load_flow HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start process data...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [13/Jun/2023 10:14:51] \"\u001b[37mPOST /upload HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "数据格式不匹配\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [13/Jun/2023 10:14:59] \"\u001b[37mGET /load_network HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [13/Jun/2023 10:15:00] \"\u001b[37mGET /load_wordcloud HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [13/Jun/2023 10:15:00] \"\u001b[37mGET /load_flow HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [13/Jun/2023 10:16:10] \"\u001b[37mGET /load_hospital HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start process data...\n",
+      "process data overed\n",
+      "b'processedtest.csv'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [13/Jun/2023 10:16:26] \"\u001b[37mPOST /upload HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [13/Jun/2023 10:17:51] \"\u001b[37mGET /load_network HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [13/Jun/2023 10:17:51] \"\u001b[37mGET /load_wordcloud HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [13/Jun/2023 10:17:52] \"\u001b[37mGET /load_flow HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start process data...\n",
+      "process data overed\n",
+      "b'processedtest.csv'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [13/Jun/2023 10:18:01] \"\u001b[37mPOST /upload HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -271,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
